--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "license": "ISC",
     "main": "index.htm",
     "name": "p4",
-    "version": "1.0.4",
+    "version": "1.0.8",
+    "devDependencies": {
+        "nwjs-builder-phoenix": "^1.15.0"
+    },
     "webkit": {},
     "window": {
         "frame": true,
@@ -27,5 +30,12 @@
         "toolbar": true,
         "width": 1000,
         "icon": "p4.png"
+    },
+    "build": {
+        "nwVersion": "0.42.2"
+    },
+    "scripts": {
+        "dist": "build --tasks win-x86,win-x64,linux-x86,linux-x64,mac-x64 --mirror https://dl.nwjs.io/ .",
+        "start": "run --x86 --mirror https://dl.nwjs.io/ ."
     }
 }
